--- a/DX12 Sandbox.vcxproj.filters
+++ b/DX12 Sandbox.vcxproj.filters
@@ -60,5 +60,8 @@
     <FxCompile Include="Shaders\PixelShader.hlsl">
       <Filter>Shaders</Filter>
     </FxCompile>
+    <FxCompile Include="Shaders\RootSignature.hlsl">
+      <Filter>Shaders</Filter>
+    </FxCompile>
   </ItemGroup>
 </Project>
