--- a/DX12 Sandbox.vcxproj
+++ b/DX12 Sandbox.vcxproj
@@ -150,6 +150,7 @@
     <ClCompile Include="D3D\DXContext.cpp" />
     <ClCompile Include="Debug\DXDebugLayer.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Support\ImageLoader.cpp" />
     <ClCompile Include="Support\Shader.cpp" />
     <ClCompile Include="Support\Window.cpp" />
   </ItemGroup>
@@ -181,6 +182,7 @@
     <ClInclude Include="D3D\DXContext.h" />
     <ClInclude Include="Debug\DXDebugLayer.h" />
     <ClInclude Include="Support\ComPointer.h" />
+    <ClInclude Include="Support\ImageLoader.h" />
     <ClInclude Include="Support\Shader.h" />
     <ClInclude Include="Support\Window.h" />
     <ClInclude Include="Support\WinInclude.h" />
